--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "clsx": "^2.1.0",
     "embla-carousel-autoplay": "^8.0.0",
     "embla-carousel-react": "^8.0.0",
+    "framer-motion": "^11.0.8",
     "geist": "^1.2.2",
     "lucide-react": "^0.338.0",
     "next": "14.1.0",
